# questionnaire-app

./: .pre-commit-config.yaml  pyproject.toml
mysite/config/: asgi.py  settings.py  urls.py  wsgi.py
mysite/config/settings/: base.py  local.py  staging.py
mysite/mysite/: settings.py
mysite/polls/: admin.py  models.py  tests.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py
mysite/polls/models/: __init__.py  choice.py  question.py
mysite/polls/templates/polls/: index.html
mysite/polls/tests/: test_models.py
mysite/polls/tests/views/: test_detail.py  test_index.py  utils.py
mysite/polls/views/: __init__.py  detail.py  index.py  results.py  vote.py
mysite/templates/admin/: base_site.html
mysite/templates/polls/: detail.html  index.html  results.html
