[tool.poetry]
name = "questionnaire-app"
version = "0.1.0"
description = ""
authors = ["uriri"]
readme = "README.md"
packages = [{include = "questionnaire_app"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.4"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
pre-commit = "^2.20.0"
django-debug-toolbar = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
